tests/substructural/composition/struct_copy_with_mut_ref.err.expected
error: at 2:32: [COMP-CopyMarkerNotSatisfied] In struct 'Bad' (marked Copy), field 'r' has type &mut i64 which is not Copy
   |
 2 |             struct Bad: Copy { r: &mut i64 }
   |                                ^^^^^^^^^^^
