tests/substructural/composition/struct_copy_with_mut_ref.sim

            struct Bad: Copy { r: &mut i64 }
            